Update/Fix swagger docs
