# docs/swagger.yaml
@@ -1,9 +1,54 @@
 basePath: /api
 definitions:
-  models.Body:
+  models.Empty:
     description: HTTP Body model for all responses
+    type: object
+  models.Guild:
+    description: Model of guild data
     properties:
-      content: {}
+      guild_id:
+        type: string
+      multiplier:
+        type: integer
+      pb_channel_id:
+        $ref: '#/definitions/models.NullString'
+    type: object
+  models.NullString:
+    properties:
+      string:
+        type: string
+      valid:
+        description: Valid is true if String is not NULL
+        type: boolean
+    type: object
+  models.RSN:
+    properties:
+      guild_id:
+        type: string
+      rsn:
+        type: string
+      user_id:
+        type: string
+      wom_id:
+        type: string
+    type: object
+  models.User:
+    description: Model of active guild member
+    properties:
+      guild_id:
+        type: string
+      points:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  models.Users:
+    description: Model of active guild members
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/models.User'
+        type: array
     type: object
 host: localhost:8080
 info:
@@ -35,30 +80,30 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "204":
+          description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Remove RSN from guild and user
       tags:
       - RSN
@@ -79,27 +124,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.RSN'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Get RSN related information by guild and user ID
       tags:
       - RSN
@@ -128,31 +173,27 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Link an RSN to a user
       tags:
       - RSN
@@ -171,27 +212,27 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Delete a guild
       tags:
       - Guild
@@ -208,27 +249,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Guild'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Get a guild by ID
       tags:
       - Guild
@@ -246,31 +287,27 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Create / Initialize a guild
       tags:
       - Guild
@@ -289,27 +326,27 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Update multiplier for guild
       tags:
       - Guild
@@ -329,27 +366,27 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Update times channel from guild
       tags:
       - Guild
@@ -367,27 +404,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Users'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Get a guilds leaderboard by ID
       tags:
       - Leaderboard
@@ -406,27 +443,27 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Remove time from guilds best times
       tags:
       - Time
@@ -445,31 +482,27 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Add a new best time to guild
       tags:
       - Time
@@ -494,27 +527,27 @@ paths:
         "204":
           description: No Content
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Delete a user from guild
       tags:
       - User
@@ -524,10 +557,19 @@ paths:
       - description: Guild ID
         in: query
         name: guild_id
+        required: true
         type: string
       - description: User ID
         in: query
         name: user_id
+        type: string
+      - description: WOM ID
+        in: query
+        name: wom_id
+        type: string
+      - description: RSN
+        in: query
+        name: rsn
         type: string
       produces:
       - application/json
@@ -535,27 +577,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.User'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Get a user by ID
       tags:
       - User
@@ -572,37 +614,38 @@ paths:
         name: user_id
         required: true
         type: string
+      - description: RSN
+        in: path
+        name: rsn
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "409":
           description: Conflict
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Create / Initialize a new user
       tags:
       - User
@@ -624,27 +667,27 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Users'
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "429":
           description: Too Many Requests
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/models.Body'
+            $ref: '#/definitions/models.Empty'
       summary: Get multiple users
       tags:
       - Users
